--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -4,6 +4,11 @@ block content
 
 	#dv-loading.callout.callout-info.text-center.col-md-9
 		span.loading.text-muted &nbsp;#{__('welcome to new system v2')}
+
+		if info.memberType == 'administrator'
+			span.loading.text-muted &nbsp;#{__('welcome to new system v2')}
+
+
 	.col-md-3
 		.box.box-success.box-solid
 			.box-header
