--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -6,7 +6,7 @@ block content
 		span.loading.text-muted &nbsp;#{__('welcome to new system v2')}
 
 		if info.memberType == 'administrator'
-			span.loading.text-muted &nbsp;#{__('welcome to new system v2')}
+			| sdfsdf sdf sdf sdfsdfsd sdfsdfsdf
 
 
 	.col-md-3
