--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -2,12 +2,13 @@ extends layout
 
 block content
 
-	#dv-loading.callout.callout-info.text-center.col-md-9
-		span.loading.text-muted &nbsp;#{__('welcome to new system v2')}
+	#dv-loading.col-md-9
+		.callout.callout-info.text-center
+			span.loading.text-muted &nbsp;#{__('welcome to new system v2')}
 
-	if info.memberType == 'administrator'
-		#dv-history.col-md-9
-			| sdfsdf sdf sdf sdfsdfsd sdfsdfsdf
+		if info.memberType == 'administrator'
+			#dv-history
+				| sdfsdf sdf sdf sdfsdfsd sdfsdfsdf
 
 
 	.col-md-3
