--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -8,7 +8,16 @@ block content
 
 		if info.memberType == 'administrator'
 			#dv-history
-				| sdfsdf sdf sdf sdfsdfsd sdfsdfsdf
+				.col-lg-3.col-xs-6
+					.small-box.bg-aqua
+						.inner
+							h3 150
+							p New Orders
+						.icon
+							i.ion.ion-bag
+						a.small-box-footer(href='#')
+							| More info 
+							i.fa.fa-arrow-circle-right
 
 
 	.col-md-3
