--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -7,8 +7,30 @@ block content
 			span.loading.text-muted &nbsp;#{__('welcome to new system v2')}
 
 		if info.memberType == 'administrator'
-			#dv-history
-				.col-lg-3.col-xs-6
+			#dv-history.row
+				.col-md-4.col-xs-6
+					.small-box.bg-aqua
+						.inner
+							h3 150
+							p New Orders
+						.icon
+							i.ion.ion-bag
+						a.small-box-footer(href='#')
+							| More info 
+							i.fa.fa-arrow-circle-right
+
+				.col-md-4.col-xs-6
+					.small-box.bg-aqua
+						.inner
+							h3 150
+							p New Orders
+						.icon
+							i.ion.ion-bag
+						a.small-box-footer(href='#')
+							| More info 
+							i.fa.fa-arrow-circle-right
+
+				.col-md-4.col-xs-6
 					.small-box.bg-aqua
 						.inner
 							h3 150
