--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -25,7 +25,7 @@ block content
 							h3 150
 							p New Orders
 						.icon
-							i.ion.ion-ios-clock-outline
+							i.ion.ion-android-time
 						a.small-box-footer(href='#')
 							| More info 
 							i.fa.fa-arrow-circle-right
