--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -36,7 +36,7 @@ block content
 							h3 150
 							p New Orders
 						.icon
-							i.ion.ion-trophy
+							i.ion.ion-person
 						a.small-box-footer(href='#')
 							| More info 
 							i.fa.fa-arrow-circle-right
