--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -33,10 +33,10 @@ block content
 				.col-md-4.col-xs-6
 					.small-box.bg-aqua
 						.inner
-							h3 150
+							h3 589,984
 							p New Orders
 						.icon
-							i.ion.ion-person
+							i.ion.ion-social-bitcoin
 						a.small-box-footer(href='#')
 							| More info 
 							i.fa.fa-arrow-circle-right
