--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -20,7 +20,7 @@ block content
 							i.fa.fa-arrow-circle-right
 
 				.col-md-4.col-xs-6
-					.small-box.bg-aqua
+					.small-box.bg-green
 						.inner
 							h3 150
 							p New Orders
@@ -31,7 +31,7 @@ block content
 							i.fa.fa-arrow-circle-right
 
 				.col-md-4.col-xs-6
-					.small-box.bg-aqua
+					.small-box.bg-red
 						.inner
 							h3 589,984
 							p New Orders
