--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -12,33 +12,33 @@ block content
 					.small-box.bg-aqua
 						.inner
 							h3 150
-							p New Orders
+							p #{__('New Orders')}
 						.icon
 							i.ion.ion-bag
 						a.small-box-footer(href='#')
-							| More info 
+							| #{__('More Info')} 
 							i.fa.fa-arrow-circle-right
 
 				.col-md-4.col-xs-6
 					.small-box.bg-green
 						.inner
 							h3 150
-							p New Orders
+							p #{__('Order History')}
 						.icon
 							i.ion.ion-android-time
 						a.small-box-footer(href='#')
-							| More info 
+							| #{__('More Info')} 
 							i.fa.fa-arrow-circle-right
 
 				.col-md-4.col-xs-6
 					.small-box.bg-red
 						.inner
 							h3 589,984
-							p New Orders
+							p #{__('Remax Wallet')}
 						.icon
 							i.ion.ion-social-bitcoin
 						a.small-box-footer(href='#')
-							| More info 
+							| #{__('More Info')} 
 							i.fa.fa-arrow-circle-right
 
 
