--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -11,7 +11,7 @@ block content
 				.col-md-4.col-xs-6
 					.small-box.bg-aqua
 						.inner
-							h3 150
+							h3#numberNewOrder 0
 							p #{__('New Orders')}
 						.icon
 							i.ion.ion-bag
@@ -22,7 +22,7 @@ block content
 				.col-md-4.col-xs-6
 					.small-box.bg-green
 						.inner
-							h3 150
+							h3#numberOrderHistory 0
 							p #{__('Order History')}
 						.icon
 							i.ion.ion-android-time
@@ -33,7 +33,7 @@ block content
 				.col-md-4.col-xs-6
 					.small-box.bg-red
 						.inner
-							h3 0
+							h3#numberWallet 0
 							p #{__('Remax Wallet')}
 						.icon
 							i.ion.ion-social-bitcoin
