--- a/views/layout.jade
+++ b/views/layout.jade
@@ -148,5 +148,5 @@ html
 		- if (locals.script)
 			script(src=script)
 
-		if (config.screen == 'index')
+		if (config.screen == 'dashboard')
 			script(src='/javascripts/dashboard.js')	
