--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -33,7 +33,7 @@ block content
 				.col-md-4.col-xs-6
 					.small-box.bg-red
 						.inner
-							h3#numberWallet 0 #{config.screen}
+							h3#numberWallet 0
 							p #{__('Remax Wallet')}
 						.icon
 							i.ion.ion-social-bitcoin
