--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -10,20 +10,9 @@ block content
 					.small-box.bg-aqua
 						.inner
 							h3#numberNewOrder 0
-							p #{__('Order History')}
+							p #{__('News')}
 						.icon
-							i.ion.ion-bag
-						a.small-box-footer(href='#')
-							| #{__('More Info')} 
-							i.fa.fa-arrow-circle-right
-
-				.col-md-4.col-xs-6
-					.small-box.bg-green
-						.inner
-							h3#numberOrderHistory 0
-							p #{__('Order History')}
-						.icon
-							i.ion.ion-android-time
+							i.ion.ion-chatbubble-working
 						a.small-box-footer(href='#')
 							| #{__('More Info')} 
 							i.fa.fa-arrow-circle-right
@@ -35,6 +24,17 @@ block content
 							p #{__('Remax Wallet')}
 						.icon
 							i.ion.ion-social-bitcoin
+						a.small-box-footer(href='#')
+							| #{__('More Info')} 
+							i.fa.fa-arrow-circle-right
+
+				.col-md-4.col-xs-6
+					.small-box.bg-green
+						.inner
+							h3#numberOrderHistory 0
+							p #{__('Order History')}
+						.icon
+							i.ion.ion-bag
 						a.small-box-footer(href='#')
 							| #{__('More Info')} 
 							i.fa.fa-arrow-circle-right
