--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -9,7 +9,7 @@ block content
 				.col-md-4.col-xs-6
 					.small-box.bg-aqua
 						.inner
-							h3#numberNewOrder 0
+							h3#numberNews 0
 							p #{__('News')}
 						.icon
 							i.ion.ion-chatbubble-working
@@ -29,7 +29,7 @@ block content
 							i.fa.fa-arrow-circle-right
 
 				.col-md-4.col-xs-6
-					.small-box.bg-green
+					.small-box.bg-orange
 						.inner
 							h3#numberOrderHistory 0
 							p #{__('Order History')}
