--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -5,7 +5,7 @@ block content
 	#dv-loading.col-md-9
 
 		if info.memberType == 'administrator'
-			#dv-history.row
+			#dv-summary.row
 				.col-md-4.col-xs-6
 					.small-box.bg-aqua
 						.inner
@@ -38,6 +38,46 @@ block content
 						a.small-box-footer(href='#')
 							| #{__('More Info')} 
 							i.fa.fa-arrow-circle-right
+
+			#dv-detail.row
+				.col-md-12.col-xs-12
+
+					.box.box-info
+						.box-header.with-border
+							h3.box-title Latest Orders
+							.box-tools.pull-right
+								button.btn.btn-box-tool(data-widget='collapse')
+									i.fa.fa-minus
+								button.btn.btn-box-tool(data-widget='remove')
+									i.fa.fa-times
+						.box-body
+							.table-responsive
+								table.table.no-margin
+									thead
+										tr
+											th Order ID
+											th Item
+											th Status
+											th Popularity
+									tbody
+										tr
+											td
+												a(href='pages/examples/invoice.html') OR9842
+											td Call of Duty IV
+											td
+												span.label.label-success Shipped
+											td
+												.sparkbar(data-color='#00a65a', data-height='20') 90,80,90,-70,61,-83,63
+										tr
+											td
+												a(href='pages/examples/invoice.html') OR1848
+											td Samsung Smart TV
+											td
+												span.label.label-warning Pending
+											td
+												.sparkbar(data-color='#f39c12', data-height='20') 90,80,-90,70,61,-83,68
+
+
 		else
 			.callout.callout-info.text-center
 				span.loading.text-muted &nbsp;#{__('welcome to new system v2')}
