--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -49,11 +49,11 @@ block content
 							table#tb-order.table.table-condensed.table-hover(width="100%")
 								thead
 									tr.font-sm
-										th.text-right(width="75")  #{__('order number')}
-										th.text-right(width="75")  #{__('orderDate')}
-										th.text-right  #{__('status')}
-										th.text-right(width="75")  #{__('item(s)')}
-										th.text-right(width="75")  #{__('piece(s)')}
+										th.text-right(width="130")  #{__('order number')}
+										th.text-right(width="120")  #{__('orderDate')}
+										th.text-right #{__('status')}
+										th.text-right(width="ุ65")  #{__('item(s)')}
+										th.text-right(width="65")  #{__('piece(s)')}
 										th.text-right(width="75")  #{__('grand total')}
 								tbody
 
