--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -35,7 +35,7 @@ block content
 							p #{__('Order History')}
 						.icon
 							i.ion.ion-bag
-						a.small-box-footer(href='#')
+						a.order_history.small-box-footer(href='#')
 							| #{__('More Info')} 
 							i.fa.fa-arrow-circle-right
 
