--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -42,11 +42,11 @@ block content
 			#dv-detail.row
 				.col-md-12.col-xs-12
 
-					.box.box-primary
+					.box.box-primary.order_history.hidden
 						.box-header
 							h3.box-title #{__('Order History')}
 						.box-body.table-responsive
-							table#tb-order.table.table-condensed.table-hover(width="100%")
+							table.table.table-condensed.table-hover(width="100%")
 								thead
 									tr.font-sm
 										th.text-right(width="130")  #{__('order number')}
