--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -47,6 +47,8 @@ block content
 					input#msg-unpaid(type='hidden', value="#{__('unpaid')}")
 					input#msg-pack(type='hidden', value="#{__('pack')}")
 					input#msg-unpack(type='hidden', value="#{__('unpack')}")
+					input#msg-awaiting_payment(type='hidden', value="#{__('Awaiting Payment')}")
+					input#msg-awaiting_stock(type='hidden', value="#{__('Awaiting Stock')}")
 
 					.box.box-primary.order_history.hidden
 						.box-header
