--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -49,6 +49,7 @@ block content
 					input#msg-unpack(type='hidden', value="#{__('unpack')}")
 					input#msg-awaiting_payment(type='hidden', value="#{__('Awaiting Payment')}")
 					input#msg-awaiting_stock(type='hidden', value="#{__('Awaiting Stock')}")
+					input#msg-total(type='hidden', value="#{__('total')}")
 
 					.box.box-primary.order_history.hidden
 						.box-header
