--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -63,6 +63,8 @@ block content
 										th #{__('status')}
 										th.text-center(width="65")  #{__('item(s)')}
 										th.text-center(width="55")  #{__('piece(s)')}
+										th.text-center(width="65")  #{__('product price')}
+										th.text-center(width="65")  #{__('shipping')}
 										th.text-right(width="85")  #{__('grand total')}
 								tbody
 
