--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -4,7 +4,7 @@ block content
 
 	#dv-loading.col-md-9
 
-		if info.memberType == 'administrator'
+		if info.memberType != 'xxx'
 			#dv-summary.row
 				.col-md-4.col-xs-6
 					.small-box.bg-aqua
